[bild-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "birdapp657"
dynamic = ["version"]
authors = [
  { name="Oscar F" },
]
description = "A small Wagtail app."
readme = "README.md"
license = { text = "Hippocratic License Version Number: 2.1 with Commons Clause License Condition v1.0" }
requires-python = ">= 3.10"
dependencies = [
    "django",
    "wagtail",
    "wagtailmedia",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
repository = "https://github.com/oscfr657/birdapp657.git"

[tool.setuptools]
packages = ["birdapp657"]
package-dir = {'birdapp657' = '.'}

[tool.setuptools.package-data]
birdapp657 = [
  './migrations/*',
  './static/*/*/*',
  './static/*/*/*/*',
  './templates/*',
  './templates/*/*',
  ]

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}
